--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "homepage": "https://github.com/ChuckreimuHakunorris/restful-api-with-orm#readme",
   "dependencies": {
-    "readline-sync": "^1.4.10"
+    "readline-sync": "^1.4.10",
+    "sequelize": "^6.35.2",
+    "sqlite3": "^5.1.7-rc.0"
   }
 }
